# python_concurrency_practice

./: .gitignore  pyproject.toml
src/: concurrency_crawling.py  config.py  coroutine_fetcher.py  kakao_naver_api_scraping.py  multi_process_fetcher.py  multi_threading_fetcher.py  sync_async_fetcher.py
src/app/: book_scraper.py  fast_main.py  project_config.py  server.py
src/app/models/: __init__.py
src/app/templates/: index.html
